tdf#132603: fix crash when selecting part of a comment

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=160206

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=65404e2c72ea2d5d3f6c074121005b8b9369e7fb
author	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2020-04-08 08:54:21 +0200
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2020-04-09 11:14:15 +0200
commit	65404e2c72ea2d5d3f6c074121005b8b9369e7fb (patch)
tree	15eeeb5b634c461611893dbe3b49d689ef71f5c4
parent	40d83914d43f60a196dfabddea0b52e2046b333a (diff)
Move is*Locked methods to object shell
They depend on the model, not the view.
Follow-up to 523922ee9d033fd304d2b50a72b76853ddcfbcdf

Change-Id: I9267e856a0f0fb22778dcd95974bb4217fd3712f